修改了安全哈希与消息摘要概述

--- a/hashlib-tutorial.ipynb
+++ b/hashlib-tutorial.ipynb
@@ -28,7 +28,8 @@
    "metadata": {},
    "source": [
     "<h2>hashlib --- 安全哈希与消息摘要</h2>\n",
-    "每种类型的 hash 都有一个构造器方法。 它们都返回一个具有相同的简单接口的 hash 对象。 例如，使用 sha256() 创建一个 SHA-256 hash 对象。 你可以使用 update() 方法向这个对象输入 字节类对象 (通常是 bytes)。 在任何时候你都可以使用 digest() 或 hexdigest() 方法获得到目前为止输入这个对象的拼接数据的 digest。"
+    "安全哈希与消息摘要是把任意长度的输入（又叫做预映射pre-image）通过散列算法变换成固定长度的输出，该输出就是散列值。常见的，MD5输出128 bit、SHA1输出160 bit、SHA256输出256 bit。</br>\n",
+    "hashlib库 每种类型的 hash 都有一个构造器方法。 它们都返回一个具有相同的简单接口的 hash 对象。 例如，使用 sha256() 创建一个 SHA-256 hash 对象。 你可以使用 update() 方法向这个对象输入 字节类对象 (通常是 bytes)。 在任何时候你都可以使用 digest() 或 hexdigest() 方法获得到目前为止输入这个对象的拼接数据的 digest。"
    ],
    "execution_count": null,
    "outputs": []
